[package]
name = "timehash-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tlock = { git = "https://github.com/nulltea/tlock-rs" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22.1"
bls12_381_plus = { version = "0.7.0", features = ["nightly"] }